[package]
name = "transparent"
version = "0.4.0"
description = "A crate for running processes on a virtual desktop / virtual X server environment."
readme = "README.md"
repository = "https://github.com/OpenByteDev/transparent" 
documentation = "https://docs.rs/transparent"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
keywords = ["headless", "hidden", "process", "virtual", "desktop"]

[dependencies]
delegate = "0.10"

[target.'cfg(windows)'.dependencies]
tempfile = "3.7"
windows = { version = "0.43", features = [
    "Win32_Foundation", "Win32_Security", "Win32_System_Threading",
    "Win32_System_SystemServices", "Win32_System_StationsAndDesktops", "Win32_Graphics_Gdi",
    "Win32_System_WindowsProgramming"
] }
widestring = "1.0"
snailquote = "0.3"
defer-lite = "1.0"
ctrlc = { version = "3.2", features = ["termination"] }
uuid = { version = "1.2", features = ["v4"] }
walkdir = "2.3"

[features]
default = []
expose-impl = []
__docs_rs = []

[package.metadata.docs.rs]
features = ["__docs_rs"]
